...
            "state" : "translated",
            "value" : "Добавить"
          }
        }
      }
    },
    "Add a gift" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add a gift"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Добавить подарок"
          }
        }
      }
    },
    "Add family member" : {
      "extractionState" : "manual",
...
            "value" : "Cancel"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отмена"
          }
        }
      }
    },
    "Choose" : {
      "extractionState" : "manual",
...
            "value" : "Continue"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Далее"
          }
        }
      }
    },
    "Continue with Apple" : {
      "extractionState" : "manual",
...
            "value" : "Home"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Главная"
          }
        }
      }
    },
    "Housewarming" : {
      "extractionState" : "manual",
...
            "value" : "People"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Люди"
          }
        }
      }
    },
    "Pick a date" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "Сохранить полученное"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
...
